--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,7 +1,7 @@
 .modal-todo {
     min-height: 500px;
     width: 700px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -11,5 +11,9 @@
         margin: 20px 0;
         font-size: 50px;
         font-weight: 600;
+    }
+
+    &_list {
+        margin-top: 20px;
     }
 }
