--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -34,3 +34,18 @@
         }
     }
 }
+
+.todo-active {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 10px;
+    font-size: 24px;
+    background-color: #e4e4e4;
+    margin-bottom: 15px;
+    border-radius: 5px;
+
+    .todo_title {
+        color: rgb(172, 172, 172);
+    }
+}
